error.txt
In file included from /usr/include/c++/4.8.2/ios:42:0,
                 from /usr/include/c++/4.8.2/istream:38,
                 from /usr/include/c++/4.8.2/fstream:38,
                 from vsfs.cpp:2:
/usr/include/c++/4.8.2/bits/ios_base.h: In copy constructor 'std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)':
/usr/include/c++/4.8.2/bits/ios_base.h:786:5: error: 'std::ios_base::ios_base(const std::ios_base&)' is private
     ios_base(const ios_base&);
     ^
In file included from /usr/include/c++/4.8.2/ios:44:0,
                 from /usr/include/c++/4.8.2/istream:38,
                 from /usr/include/c++/4.8.2/fstream:38,
                 from vsfs.cpp:2:
/usr/include/c++/4.8.2/bits/basic_ios.h:66:11: error: within this context
     class basic_ios : public ios_base
           ^
In file included from vsfs.cpp:2:0:
/usr/include/c++/4.8.2/fstream: In copy constructor 'std::basic_ofstream<char>::basic_ofstream(const std::basic_ofstream<char>&)':
/usr/include/c++/4.8.2/fstream:599:11: note: synthesized method 'std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)' first required here 
     class basic_ofstream : public basic_ostream<_CharT,_Traits>
           ^
In file included from /usr/include/c++/4.8.2/ios:43:0,
                 from /usr/include/c++/4.8.2/istream:38,
                 from /usr/include/c++/4.8.2/fstream:38,
                 from vsfs.cpp:2:
/usr/include/c++/4.8.2/streambuf: In copy constructor 'std::basic_filebuf<char>::basic_filebuf(const std::basic_filebuf<char>&)':
/usr/include/c++/4.8.2/streambuf:802:7: error: 'std::basic_streambuf<_CharT, _Traits>::basic_streambuf(const std::basic_streambuf<_CharT, _Traits>&) [with _CharT = char; _Traits = std::char_traits<char>]' is private
       basic_streambuf(const basic_streambuf& __sb)
       ^
In file included from vsfs.cpp:2:0:
/usr/include/c++/4.8.2/fstream:72:11: error: within this context
     class basic_filebuf : public basic_streambuf<_CharT, _Traits>
           ^
/usr/include/c++/4.8.2/fstream: In copy constructor 'std::basic_ofstream<char>::basic_ofstream(const std::basic_ofstream<char>&)':
/usr/include/c++/4.8.2/fstream:599:11: note: synthesized method 'std::basic_filebuf<char>::basic_filebuf(const std::basic_filebuf<char>&)' first required here 
     class basic_ofstream : public basic_ostream<_CharT,_Traits>
           ^
vsfs.cpp: In member function 'int VSFileSystem::mkfs()':
vsfs.cpp:39:17: note: synthesized method 'std::basic_ofstream<char>::basic_ofstream(const std::basic_ofstream<char>&)' first required here 
   initMagic(disk);
                 ^
In file included from vsfs.cpp:7:0:
vsfs.hpp:10:7: error:   initializing argument 1 of 'int VSFileSystem::initMagic(std::ofstream)'
   int initMagic(std::ofstream disk);
       ^
vsfs.cpp: In function 'int initMagic(std::ofstream)':
vsfs.cpp:45:17: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
   char* magic = "Very Simple File System";
                 ^
